refactor(ComandoTabCompleter): Use JSpecify @NonNull and modern Stream toList()