@@ -1,14 +1,13 @@
 package pb.ajneb97;
 
-
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
+import org.jspecify.annotations.NonNull;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ComandoTabCompleter implements TabCompleter {
 
@@ -19,7 +18,7 @@ public class ComandoTabCompleter implements TabCompleter {
     }
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command cmd, String label, String[] args) {
+    public @NonNull List<String> onTabComplete(@NonNull CommandSender sender, @NonNull Command cmd, @NonNull String label, @NonNull String @NonNull [] args) {
         if (!cmd.getName().equalsIgnoreCase("paintball")) return Collections.emptyList();
 
         if (args.length == 1) {
@@ -38,7 +37,7 @@ public class ComandoTabCompleter implements TabCompleter {
             sub.add("removetophologram");
             sub.add("givecoins");
             sub.add("reload");
-            return sub.stream().filter(s -> s.startsWith(args[0].toLowerCase())).collect(Collectors.toList());
+            return sub.stream().filter(s -> s.startsWith(args[0].toLowerCase())).toList();
         }
 
         if (args.length == 2) {
@@ -49,23 +48,22 @@ public class ComandoTabCompleter implements TabCompleter {
                     args[0].equalsIgnoreCase("disable") ||
                     args[0].equalsIgnoreCase("edit")) {
                 List<String> arenaNames = plugin.getPartidas().stream()
-                        .map(p -> p.getNombre())
-                        .collect(Collectors.toList());
-                return arenaNames.stream().filter(a -> a.toLowerCase().startsWith(args[1].toLowerCase())).collect(Collectors.toList());
+                        .map(pb.ajneb97.juego.Partida::getNombre)
+                        .toList();
+                return arenaNames.stream().filter(a -> a.toLowerCase().startsWith(args[1].toLowerCase())).toList();
             }
-            // Bei createtophologram/removetophologram → Name vorschlagen (optional)
         }
 
         // Bei createtophologram: Vorschläge für kills/wins, global/monthly/weekly
         if (args.length == 3 && args[0].equalsIgnoreCase("createtophologram")) {
             List<String> stats = new ArrayList<>();
             stats.add("kills"); stats.add("wins");
-            return stats.stream().filter(s -> s.startsWith(args[2].toLowerCase())).collect(Collectors.toList());
+            return stats.stream().filter(s -> s.startsWith(args[2].toLowerCase())).toList();
         }
         if (args.length == 4 && args[0].equalsIgnoreCase("createtophologram")) {
             List<String> periods = new ArrayList<>();
             periods.add("global"); periods.add("monthly"); periods.add("weekly");
-            return periods.stream().filter(s -> s.startsWith(args[3].toLowerCase())).collect(Collectors.toList());
+            return periods.stream().filter(s -> s.startsWith(args[3].toLowerCase())).toList();
         }
 
         return Collections.emptyList();
